<resources>
    <string name="app_name">KETTIK</string>
    <string name="search_title">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Description -->
    <string name="kettik_eto">КЕТТИК - это платформа
    для поиска водителей или
    пассажиров для совместных
    поездок по всему Кыргызстану</string>
    <string name="skip">Пропустить</string>
    <string name="next">Далее</string>
    <string name="for_passengers">Пассажирам:</string>
    <string name="for_passengers_description">Низкие цены и удобства</string>
    <string name="for_drivers">Водителям:</string>
    <string name="for_drivers_description">Оплата топлива и приятные
собеседники</string>

    <!-- Mainactivity -->
    <string name="IamDriver">Я Водитель</string>
    <string name="IamPassenger">Я Пассажир</string>
    <string name="SendParcel">Отправить Посылк</string>

    <!-- Login -->
    <string name="login">Логин</string>
    <string name="phone_number_hint">Номер телефона</string>
    <string name="password_number_hint">Пароль</string>
    <string name="create_new_accaunt">Создать новый аккаунт</string>

    <!-- Profile Registration -->
    <string name="registration_profile">Регистрация профиля</string>
    <string name="personal_information">Персональная информация</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="birthdate">Дата рождения</string>
    <string name="save">Сохранить</string>

    <!-- Phone Registration -->
    <string name="add_accaunt">Добавить аккаунт</string>
    <string name="sms_code">SMS с кодом подтверждения придет на Ваш номер телефона</string>
    <string name="send_code">Отправить код</string>

    <!-- Edit Profile -->
    <string name="edit_profile">Редактировать профиль</string>
    <string name="carnumber">"Номер автомобиля:  "</string>
    <string name="example1">*Например</string>
    <string name="cartype">"Марка автомобиля:  "</string>
    <string name="driverlicencephoto">Фото водт. прав</string>

    <!-- additional information -->
    <string name="information_about_driver">Информация о водителе</string>
    <string name="agreement">Нажимая кнопку Сохранить,
вы соглашаетесь с нашими Условиями.</string>

    <!-- Confirmation -->
    <string name="confirmation_code">Код подтверждения</string>
    <string name="code">Код</string>
    <string name="we_sent">Мы отправили SMS с кодом проверки на Ваш телефон</string>
    <string name="registration">Регистрация</string>
    <string name="didnotget">Не получили?</string>

    <!--Help -->
    <string name="help">Помощь</string>
    <string name="writeus">Напишите нам и мы ответим в ближайшее время:</string>
    <string name="youremail">Введите свой e-mail</string>
    <string name="yourquestion">Свой вопрос...</string>
    <string name="sendtext">Отправить сообщение</string>

    <!--Mytrips -->
    <string name="mytrips">Мои поездки</string>

    <!--Settings -->
    <string name="settings">Настройки</string>
    <string name="language">Язык / Тил / Language</string>
    <string name="russian">Русский</string>
    <string name="logout">Выйти из аккаунта</string>

    <!--Congrats -->
    <string name="congrats">Поздравляем!</string>
    <string name="successadd">Вы успешно добавили новый</string>
    <string name="trip">маршрут!</string>
    <string name="request">запрос!</string>

    <!--driveritem-->
    <string name="som">сом</string>
    <string name="dateandtime">Дата и время:</string>

    <!--driverrouteadd-->
    <string name="fromhint">Откуда...</string>
    <string name="tohint">Куда...</string>
    <string name="date">Дата выезда...</string>
    <string name="price">Цена...</string>
    <string name="freeseat">*Количество свободных мест</string>
    <string name="cantakeparcel">Могу подобрать посылку</string>
    <string name="post">Опубликовать</string>

    <!--Fragmentsearchdriver-->
    <string name="addnewrequest">Добавить новый запрос</string>
    <string name="alldrivers">Все водители:</string>

    <!--Fragmentsearchparcel-->
    <string name="allparcels">Все посылки:</string>

    <!--Fragmentsearchpassengers-->
    <string name="addnewtrip">Добавить новый маршрут</string>
    <string name="allpassengers">Все пассажиры:</string>

    <!--navheader-->
    <string name="signin">Войти</string>
    <string name="yourareguest">Вы вошли как гость</string>

    <!--parcelrequestadd-->
    <string name="add">Добавить</string>


    <string name="peoplequantity">*Количество человек</string>

    <!--popupdriverinformation-->
    <string name="driver">Водитель</string>
    <string name="tripprice">Цена поездки:    </string>
    <string name="call">Позвонить</string>
    <string name="sms">Написать</string>
    <string name="afteragreement">*если вы договорились с этим водителем о поездке,
тогда нажмите “Я еду”</string>
    <string name="yaedu">Договорились</string>
    <string name="cancel">Искать дальше</string>

    <string name="search">Поиск</string>

    <string name="afteragreement2">*если вы договорились с этим пассажиром о поездке,
тогда нажмите “Подобрал””</string>

    <string name="podobral">Договорились</string>



    <string name="poiskpassajira">Поиск пассажира</string>
    <string name="poiskvoditelya">Поиск водителя</string>
    <string name="poiskmarwruta">Поиск маршрута</string>
    <string name="zapolnitevsepolya">Заполните все поля jjj</string>

    <string name="chtobydobavitzapros">Чтобы добавить запрос, войдите в систему</string>
    <string name="chtobydobavitmarwrut">Чтобы добавить маршрут, войдите в систему</string>
    <string name="chtobyuvidet">Чтобы увидеть ваши поездки, войдите в систему</string>

    <string name="chelovek">  человек</string>

    <string name="svobodno"> свободно</string>

    <string name="vyuvereny">Вы уверены что хотите Удалить этот заказ?</string>

    <string name="dobavitsnimokvodprav">Добавить снимок вод. прав"</string>
    <string name="neverniyloginiliparol">Неверный номер или пароль"</string>
    <string name="proizowlaowibka">Произошла ошибка, попробуйте заново"</string>
    <string name="proverteparoli">Проверьте что пароли совпадают"</string>
    <string name="voditel">Водитель"</string>
    <string name="areyousuretochange">Вы уверены что хотите Выбрать этот язык?"</string>
    <string name="yes">ДА</string>
    <string name="no">НЕТ</string>






















































    <string name="title_activity_edit_profile">EditProfile</string>

    <string-array name="genderlist">
        <item>Мужской</item>
        <item>Женский</item>
    </string-array>

    <string-array name="countryList">
        <item>Кыргызстан</item>
        <item>Россия</item>
        <item>Казакстан</item>
    </string-array>

</resources>
