<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:background="#4CA2CD"
    tools:context=".Registr.EditProfile"
    android:layout_width="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/toolbar"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/ellipse"/>

        <TextView
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp"
            android:layout_alignParentTop="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textAllCaps="true"
            android:fontFamily="@font/rubickregular"
            android:textStyle="bold"
            android:textColor="#4CA2CD"
            android:text="@string/registration_profile"/>

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/carnumber"
            android:layout_alignTop="@+id/accept_button"
            android:background="@drawable/back"
            android:scaleType="center"
            android:scaleX="0.5"
            android:scaleY="0.5" />

        <ImageButton
            android:layout_alignParentRight="true"
            android:layout_marginTop="22dp"
            android:layout_marginRight="15dp"
            android:id="@+id/accept_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/check"
            android:scaleType="center"
            android:scaleY="0.5"
            android:scaleX="0.5"/>

        <TextView
            android:id="@+id/info"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:fontFamily="@font/rubickregular"
            android:textSize="18sp"
            android:text="@string/information_about_driver"/>



        <EditText
            android:id="@+id/carnumber"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="22dp"
            android:layout_below="@+id/info"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:singleLine="true"
            android:fontFamily="@font/rubickregular"
            android:hint="@string/carnumber"
            android:gravity="center_vertical"
            android:textSize="15sp"
            android:textColor="#4CA2CD"
            android:background="@drawable/edit_text_shape"/>

        <TextView
            android:id="@+id/primer"
            android:layout_marginTop="22dp"
            android:layout_marginLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/info"
            android:fontFamily="@font/rubickregular"
            android:textColor="#ffffff"
            android:text="@string/example1"
            android:layout_toEndOf="@+id/carnumber"/>

        <TextView
            android:id="@+id/nomer"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/primer"
            android:fontFamily="@font/rubickregular"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:text="02KG 547AAC"
            android:layout_toEndOf="@+id/carnumber"/>

        <EditText
            android:id="@+id/cartype"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="22dp"
            android:layout_below="@+id/carnumber"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:fontFamily="@font/rubickregular"
            android:hint="@string/cartype"
            android:gravity="center_vertical"
            android:textSize="15sp"
            android:singleLine="true"
            android:textColor="#4CA2CD"
            android:background="@drawable/edit_text_shape"/>

        <TextView
            android:id="@+id/primer2"
            android:layout_marginTop="22dp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/carnumber"
            android:fontFamily="@font/rubickregular"
            android:textColor="#ffffff"
            android:text="@string/example1"
            android:layout_toEndOf="@+id/carnumber"/>

        <TextView
            android:id="@+id/nomer2"
            android:layout_marginLeft="22dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/primer2"
            android:fontFamily="@font/rubickregular"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:text="BMW X5"
            android:layout_toEndOf="@+id/carnumber"/>



        <Button
            android:id="@+id/save"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="60dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:background="@drawable/save_button_shape"
            android:textColor="#ffffff"
            android:layout_below="@+id/cartype"
            android:fontFamily="@font/rubickregular"
            android:layout_centerHorizontal="true"
            android:textAllCaps="false"
            android:text="@string/save"/>


    </RelativeLayout>

</ScrollView>