<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@drawable/header_backround">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="0.25"
                android:weightSum="1"
                >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.6"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/back"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginLeft="20dp"
                        android:background="@drawable/arrow_back" />
                </LinearLayout>



                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="17dp"
                        android:layout_height="73dp"
                        android:layout_marginLeft="13dp"
                        android:layout_marginTop="24dp"
                        android:background="@drawable/mapasset2" />

                    <ImageView
                        android:id="@+id/calendar"
                        android:layout_width="19dp"
                        android:layout_height="19dp"
                        android:layout_marginLeft="13dp"
                        android:layout_marginTop="44dp"
                        android:background="@drawable/date" />

                </LinearLayout>




            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.75"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/from"
                    android:layout_width="232dp"
                    android:layout_height="48dp"
                    android:singleLine="true"
                    android:hint="@string/fromhint"
                    android:textSize="16sp"
                    android:textColor="@color/blue_gradient"
                    android:gravity="center"
                    android:layout_marginRight="26dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/rectangle2"

                    />
                <EditText
                    android:id="@+id/where"
                    android:layout_width="232dp"
                    android:layout_height="48dp"
                    android:singleLine="true"
                    android:hint="@string/tohint"
                    android:textSize="16sp"
                    android:textColor="@color/blue_gradient"
                    android:gravity="center"
                    android:layout_marginRight="26dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/rectangle2"

                    />
                <TextView
                    android:id="@+id/date"
                    android:layout_width="232dp"
                    android:layout_height="48dp"
                    android:singleLine="true"
                    android:hint="@string/date"
                    android:textSize="16sp"
                    android:textColor="@color/blue_gradient"
                    android:gravity="center"
                    android:layout_marginRight="26dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/rectangle2"

                    />

                <Button
                    android:id="@+id/search"
                    android:layout_width="128dp"
                    android:layout_height="48dp"
                    android:layout_marginBottom="24dp"
                    android:layout_marginLeft="46dp"
                    android:layout_marginTop="24dp"
                    android:layout_weight="0.4"
                    android:background="@drawable/rectangle"
                    android:text="@string/search"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>





    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">


    </LinearLayout>





</LinearLayout>
